2014-02-05  NIIBE Yutaka  <gniibe@fsij.org>

	* src/sha512.h, src/sha512.c: New.

	* src/sha256.c (initial_state): Don't export, it's internal.

2014-01-28  Niibe Yutaka  <gniibe@fsij.org>

	* src/muladd_256.h: New.
	* src/bn.c (bn256_mul, bn256_sqr): Assembler implementation.

	* src/ec_p256.c (get_vk_kP): Bug fix.
	(compute_kP): Bug fix for index table.

2014-01-27  Niibe Yutaka  <gniibe@fsij.org>

	* src/ec_p256.c (get_vk_kP): New.
	(naf4_257_set, naf4_257_get, compute_naf4_257):	Remove.
	(compute_kP): Change the argument, fixing for constant time.

2014-01-24  Niibe Yutaka  <gniibe@fsij.org>

	* src/ec_p256.c (get_vk): New.
	(compute_kG): Fix for constant time.
	(compute_kP): Simplify.

2014-01-23  Niibe Yutaka  <gniibe@fsij.org>

	* src/jpc.c (jpc_add_ac_signed): Fix for constant time.

	* src/ec_p256.c (ecdsa): Bug fix for k selection.

2014-01-22  Niibe Yutaka  <gniibe@fsij.org>

	* src/modp256.c (modp256_inv): Fix for constant time.

	* src/bn.c (bn256_sqr): Fix for constant time.

	* src/mod.c (mod_inv): Fix for constant time.

	* src/ec_p256.c (compute_kG): Simplify.

	* src/jpc.c (jpc_double): Support calling with A = infinity.

2014-01-21  Niibe Yutaka  <gniibe@fsij.org>

	* src/jpc.c (jpc_add_ac_signed): Bug fix for A check.

	* src/ec_p256.c (ecdsa): Fix for constant time.

	* src/modp256.c (modp256_add, modp256_sub, modp256_reduce)
	(modp256_shift): Fix for constant time.
	(modp256_inv): Likewise (not fully constant time, yet).

	* src/mod.c (mod_reduce): Fix for constant time.
	(mod_inv): Likewise (not fully constant time, yet).

	* src/bn.h (bn256, bn512): words -> word.
	* src/ec_p256.h (naf4_257): Likewise.

2014-01-20  Niibe Yutaka  <gniibe@fsij.org>

	* src/fe25519.h, src/fe25519.c: New.

2014-01-15  Niibe Yutaka  <gniibe@fsij.org>

	* src/bn.c (bn256_is_zero, bn256_is_ge, bn256_cmp): Computation
	should be constant time.

2013-12-25  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 1.1.1.
