@@ -3,6 +3,7 @@
 	* src/sha512.h, src/sha512.c: New.
 
 	* src/sha256.c (initial_state): Don't export, it's internal.
+	(memcpy_output_bswap32): Rename and remove last argument.
 
 2014-01-28  Niibe Yutaka  <gniibe@fsij.org>
 
